# pg-bsk-project

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Makefile  Protocol.md  README.md  secp256k1_bsk.cmake
resources/gui/: default.ini
src/: main.cpp
src/app/: AppState.cpp  AppState.hpp  Codes.hpp  FileMessages.cpp  FileMessages.hpp  FileSender.hpp  FileTransfer.cpp  FileTransfer.hpp  Filestate.cpp  Filestate.hpp  FuturePromise.hpp  KexMessage.cpp  KexMessage.hpp
src/crypto/: Crypto.cpp  Crypto.hpp  CryptoObjects.c  CryptoObjects.h  Random.cpp  Random.hpp
src/gui/: AppGUI.cpp  AppGUI.hpp  Chat.cpp  Chat.hpp
src/gui/controls/: DropdownList.hpp  ProgressBar.cpp  ProgressBar.hpp
src/gui/windows/: AddressWindow.cpp  AddressWindow.hpp  ChatWindow.cpp  ChatWindow.hpp  FileTransfer.cpp  FileTransfer.hpp  FileTransferWin.cpp  FileTransferWin.hpp  KeyManager.cpp  KeyManager.hpp  MessageBox.cpp  MessageBox.hpp  PasswordField.cpp  PasswordField.hpp
test/: test_crypto.cpp  test_rpclib.cpp
tests/: test_crypto.cpp  test_rpclib.cpp  test_simple_communication.cpp
